# lavaplayer

./: .gitignore  CHANGELOG.md  FAQ.md  README.md  build.gradle  build.gradle.kts  jitpack.yml  native.gradle  settings.gradle  settings.gradle.kts
.circleci/: config.yml
.darwin/: build-darwin-log
.darwin/.src/.main/.resources/.natives/darwin/: libconnector.dylib
.github/workflows/: build.yml  publish.yml
buildSrc/: build.gradle.kts
common/: build.gradle  build.gradle.kts
common/src/main/java/lavaplayer/common/natives/: NativeLibraryBinaryProvider.java  NativeLibraryLoader.java  NativeLibraryProperties.java  NativeResourceHolder.java  ResourceNativeLibraryBinaryProvider.java  SystemNativeLibraryProperties.java
common/src/main/java/lavaplayer/common/tools/: DaemonThreadFactory.java  DaemonThreadFactory.kt  ExecutorTools.java
demo/: build.gradle
demo-d4j/: build.gradle
demo-d4j/gradle/wrapper/: gradle-wrapper.properties
demo-jda/: build.gradle
extensions/format-ibxm/: build.gradle
extensions/format-xm/: build.gradle  build.gradle.kts
extensions/ip-rotator/: build.gradle.kts
extensions/youtube-rotator/: build.gradle  build.gradle.kts
gradle/: bintray.gradle
gradle/wrapper/: gradle-wrapper.properties
jda-udp/: build.gradle
jebml/: build.gradle
main/: build.gradle  build.gradle.kts
main/src/main/java/ibxm/: Channel.java  Data.java  Envelope.java  GlobalVol.java  IBXM.java  IBXMPlayer.java  Instrument.java  Module.java  Note.java  Pattern.java  PatternDisplay.java  Sample.java  WavInputStream.java
main/src/main/java/lavaplayer/container/: Formats.kt  MediaContainer.kt  MediaContainerDescriptor.java  MediaContainerDescriptor.kt  MediaContainerDetection.java  MediaContainerDetectionResult.java  MediaContainerHints.java  MediaContainerHints.kt  MediaContainerProbe.java  MediaContainerProbe.kt  MediaContainerRegistry.java  MediaContainerRegistry.kt
main/src/main/java/lavaplayer/container/adts/: AdtsAudioTrack.java  AdtsAudioTrack.kt  (+4 more)
main/src/main/java/lavaplayer/filter/: AudioFilter.java  AudioFilter.kt  AudioFilterChain.kt  AudioPipeline.java  AudioPipeline.kt  AudioPipelineFactory.java  AudioPostProcessor.kt  BufferingPostProcessor.java  BufferingPostProcessor.kt  ChannelCountPcmAudioFilter.java  CompositeAudioFilter.kt  FilterChainBuilder.kt  FinalPcmAudioFilter.kt  FloatPcmAudioFilter.kt  PcmFilterFactory.java  PcmFilterFactory.kt  PcmFormat.kt  ResamplingPcmAudioFilter.java  ResamplingQuality.kt  ShortPcmAudioFilter.java  ShortPcmAudioFilter.kt  SplitShortPcmAudioFilter.java  SplitShortPcmAudioFilter.kt  UniversalPcmAudioFilter.java  UniversalPcmAudioFilter.kt  UserProvidedAudioFilters.java  UserProvidedAudioFilters.kt
main/src/main/java/lavaplayer/format/: AudioDataFormat.kt  AudioDataFormatTools.java  AudioDataFormatTools.kt  AudioPlayerInputStream.kt  OpusAudioDataFormat.kt  Pcm16AudioDataFormat.java  Pcm16AudioDataFormat.kt  StandardAudioDataFormats.java  StandardAudioDataFormats.kt
main/src/main/java/lavaplayer/manager/: AudioConfiguration.java  AudioConfiguration.kt  AudioLoadResultHandler.kt  AudioPlayer.java  AudioPlayer.kt  AudioPlayerLifecycleManager.java  AudioPlayerLifecycleManager.kt  AudioPlayerManager.java  AudioPlayerManager.kt  AudioPlayerOptions.java  AudioPlayerResources.kt  DefaultAudioPlayer.java  DefaultAudioPlayer.kt  DefaultAudioPlayerManager.java  DefaultAudioPlayerManager.kt  FunctionalResultHandler.kt
main/src/main/java/lavaplayer/natives/: ConnectorNativeLibLoader.java  ConnectorNativeLibLoader.kt
main/src/main/java/lavaplayer/source/: AudioSourceManager.java  AudioSourceManagers.java  ItemSourceManager.java  ItemSourceManager.kt  ItemSourceManagers.java  ItemSourceManagers.kt  ProbingAudioSourceManager.java  ProbingItemSourceManager.kt  SourceRegistry.kt  Sources.kt  TrackCollectionLoader.kt
main/src/main/java/lavaplayer/tools/: CopyOnUpdateIdentityList.kt  DataFormatTools.java  DataFormatTools.kt  DecodedException.java  DecodedException.kt  ExceptionTools.java  FriendlyException.kt  GarbageCollectionMonitor.kt  JsonBrowser.kt  OrderedExecutor.java  PlayerLibrary.java  PlayerLibrary.kt  RegexTools.kt  RingBufferMath.java  RingBufferMath.kt  SuspendedCallable.kt  ThumbnailTools.kt  Units.java  Units.kt
main/src/main/java/lavaplayer/track/: AudioItem.kt  AudioReference.java  AudioReference.kt  AudioTrack.java  AudioTrack.kt  AudioTrackCollection.kt  AudioTrackCollectionType.kt  AudioTrackEndReason.kt  AudioTrackFactory.kt  AudioTrackInfo.kt  AudioTrackState.kt  BaseAudioTrack.java  BaseAudioTrack.kt  BasicAudioTrackCollection.kt  DecodedTrackHolder.kt  DefaultTrackEncoder.kt  DelegatedAudioTrack.kt  InternalAudioTrack.java  InternalAudioTrack.kt  TrackEncoder.kt  TrackMarker.kt  TrackMarkerHandler.kt  TrackMarkerManager.java  TrackMarkerManager.kt  TrackStateListener.kt
main/src/main/resources/certificates/: bundled.txt
main/src/test/java/: Test.java  Test.kt
natives/: CMakeLists.txt  build.gradle  natives.gradle
natives-publish/: build.gradle
natives/connector/: CMakeLists.txt  connector.h  fdk-aac.c  mpg123.c  opus.c  samplerate.c  vorbis.c
natives/connector/darwin/: statistics.c
natives/connector/win/: statistics.c
natives/fdk-aac/: CMakeLists.txt
natives/mp3/: configure.patch
natives/samplerate/: CMakeLists.txt  config.h
natives/vorbis/: CMakeLists.txt
node/: build.gradle  build.gradle.kts
src/main/resources/certificates/: dst-root-ca-x3.jks
stream-merger/: build.gradle  build.gradle.kts
test-samples/: build.gradle  build.gradle.kts
testbot/: build.gradle  build.gradle.kts
testbot/src/main/java/lavaplayer/demo/: Bootstrap.java  BotApplicationManager.java  BotGuildContext.java  LocalPlayerDemo.java  MessageDispatcher.kt
testbot/src/main/resources/: logback.xml
udpqueue/: build.gradle
udpqueue-natives/: CMakeLists.txt  build.gradle
udpqueue-natives/udpqueue/: CMakeLists.txt  hashmap.c  hashmap.h  linked.c  linked.h  mutex.h  timing.h  udpqueue.c
udpqueue-natives/udpqueue/linux/: mutex.c  timing.c
udpqueue-natives/udpqueue/win/: mutex.c  timing.c
(+1822 files in other folders)
